<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.screen.login.RegisterFragment"
    android:paddingHorizontal="20dp">

    <TextView
        android:id="@+id/tv_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_text"
        android:textSize="24sp"
        android:text="@string/create_new_account"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/name_regis_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_headline"
        android:background="@drawable/background_login_edt"
        android:padding="16dp"
        android:layout_marginTop="80dp"
        android:textSize="15sp"
        android:fontFamily="@font/sf_pro_text"
        android:textColor="#7f000000"
        android:hint="@string/your_name"/>

    <EditText
        android:id="@+id/email_regis_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_regis_edt"
        android:background="@drawable/background_login_edt"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:textSize="15sp"
        android:fontFamily="@font/sf_pro_text"
        android:textColor="#7f000000"
        android:hint="@string/mobile_number_or_email"/>

    <EditText
        android:id="@+id/password_regis_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_regis_edt"
        android:background="@drawable/background_login_edt"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:textSize="15sp"
        android:fontFamily="@font/sf_pro_text"
        android:textColor="#7f000000"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/confirm_pass_regis_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_regis_edt"
        android:background="@drawable/background_login_edt"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:textSize="15sp"
        android:fontFamily="@font/sf_pro_text"
        android:textColor="#7f000000"
        android:hint="@string/confirm_your_password"/>

    <TextView
        android:id="@+id/tv_requirement"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:fontFamily="@font/sf_pro_text"
        app:layout_constraintTop_toBottomOf="@id/confirm_pass_regis_edt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.9"
        android:text="@string/requirement_description"
        android:layout_marginTop="2dp"/>

    <TextView
        android:id="@+id/create_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_blue_login_btn"
        android:padding="10dp"
        android:textColor="@color/white"
        android:text="@string/create"
        android:textAlignment="center"
        android:fontFamily="@font/sf_pro_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_requirement"
        android:layout_marginTop="28dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>