<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screen.login.LogInFragment"
    android:paddingHorizontal="20dp">

    <ImageView
        android:id="@+id/mess_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat = "@drawable/facebook_messenger_4_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="72dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/login_email_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding= "16dp"
            android:background="@drawable/background_login_edt"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/mobile_number_or_email"
            android:fontFamily="@font/sf_pro_text"
            android:textColor="#7f000000"
            android:textSize="15sp"
            />

        <EditText
            android:id="@+id/password_login_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding= "16dp"
            android:background="@drawable/background_login_edt"
            app:layout_constraintTop_toBottomOf="@id/login_email_edt"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:fontFamily="@font/sf_pro_text"
            android:textColor="#7f000000"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/password_login_edt"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_blue_login_btn"
            android:padding="10dp"
            android:textColor="@color/white"
            android:fontFamily="@font/sf_pro_text"
            android:text="@string/log_in"
            android:textAlignment="center"
            android:textSize="16sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/create_new_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp"
        android:background="@drawable/background_white_login_btn"
        android:padding="10dp"
        android:textColor="#0584FE"
        android:textSize="16sp"
        android:textAlignment="center"
        android:text="@string/create_new_account"
        android:fontFamily="@font/sf_pro_text"/>


</androidx.constraintlayout.widget.ConstraintLayout>